# bloodtypes

./: LICENSE  README.md  TODO.md  blood swap.xcf  blood swap.xlsx  compatibility.json  docker-compose.yml  prevalence.json  pyproject.toml  redeploy.sh
deploy/: cron_job
src/: blood_data.json  build_data.py  compatibility.json  data_build.py  graph.py  graph_show.py  prevalence.json  test.py
src/assets/: clientSide.js
